[metadata]
name = pymeleon
version = 0.0.1
author = Konrad Mnich
author_email = konrad.mnich@gmail.com
description = A simple package to modify matplotlib graphs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/KonradMnich/pymeleon
project_urls =
    Bug Tracker = https://github.com/KonradMnich/pymeleon/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
packages = find:
python_requires = >=3.6

[options.packages.find]
where =